# cifar-10-classification

./: .pre-commit-config.yaml  README (2).md  README.md  infer.py  pyproject.toml  test.py  train.py
.dvc/: config
CIFAR/: .gitignore  model.py  trainer.py
conf/: config.yaml
conf/data/: data.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: .gitignore  infer.dvc  test.dvc  train.dvc
models/: model_val_loss=1.13.ckpt.dvc
